--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head>
-    <title>My Website Home Page</title>
+    <!-- <title>My Website Home Page</title> -->
+    <title>Version 1</title>
 </head>
 <body>
-  <h1>Welcome to my website</h1>
-  <p>Now hosted on Amazon S3!</p>
+  <!-- <h1>Welcome to my website</h1>
+  <p>Now hosted on Amazon S3!</p> -->
+  <h1>Hello World - version 1</h1>
 </body>
 </html>
